// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Moonbeam <> Hydration > XCM V3 > Transfer GLMR from Moonbeam to Hydration > hydration recipients initial glmr balance 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Moonbeam <> Hydration > XCM V3 > Transfer GLMR from Moonbeam to Hydration > hydration recipients updated glmr balance 1`] = `
{
  "free": "(rounded 10000000000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Moonbeam <> Hydration > XCM V4 > Transfer GLMR from Moonbeam to Hydration > hydration recipients initial glmr balance 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Moonbeam <> Hydration > XCM V4 > Transfer GLMR from Moonbeam to Hydration > hydration recipients updated glmr balance 1`] = `
{
  "free": "(rounded 10000000000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;
